# localbitsback

./: LICENSE  README.md
compression/: bitstream.py  blackbox.py  coupling.py  flows.py  logistic.py  nn.py  utils.py
compression/ans/: CMakeLists.txt
compression/ans/src/: ans.h  gaussian.h  python_interface.cpp  tests.cpp
compression/models/: __init__.py  flows_imagenet32.py  flows_imagenet64.py  load_flowpp_cifar.py  load_flowpp_imagenet32.py  load_flowpp_imagenet64.py
scripts/: run_compression.py
